--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/sy2002/QNICE-FPGA
 [submodule "CORE/VIC20_MiSTer"]
 	path = CORE/VIC20_MiSTer
-	url = https://github.com/MJoergen/VIC20_MiSTer
+	url = git@github.com:MJoergen/VIC20_MiSTer.git
